Update portfolio: Add project categorization, enhance Wingman page with mermaid diagrams and repository content, improve CTA button styling

--- a/index.html
+++ b/index.html
@@ -43,52 +43,76 @@
             <div class="project-grid">
                 <div class="project-card">
                     <h3>🤖 Wingman</h3>
+                    <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Team Project - NUS Orbital Apollo 2025</strong></p>
                     <p>Electron-based AI assistant desktop app. <strong>Electron + React + TypeScript + Python</strong>. Features AI integration, task management, cross-platform support.</p>
-                    <a href="wingman.html">View Details</a>
-                    <a href="https://github.com/Yxiang-828/Wingman" target="_blank">GitHub →</a>
+                    <div style="margin-top: 15px;">
+                        <a href="wingman.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
+                        <a href="https://github.com/Yxiang-828/Wingman" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                    </div>
                 </div>
                 <div class="project-card">
                     <h3>🎨 Image Upscaler</h3>
+                    <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Individual Project</strong></p>
                     <img src="https://raw.githubusercontent.com/Yxiang-828/Helper_Tools/main/image_upscaler/samples/realesrgan_1.png" alt="Image Upscaler Comparison" loading="lazy">
                     <p><strong>Real-ESRGAN + EDSR AI models</strong>. GPU-accelerated (2-5s/image). 4x quality boost. AMD Vulkan optimized.</p>
-                    <a href="image-upscaler.html">View Details</a>
-                    <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/image_upscaler" target="_blank">GitHub →</a>
+                    <div style="margin-top: 15px;">
+                        <a href="image-upscaler.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
+                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/image_upscaler" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                    </div>
                 </div>
                 <div class="project-card">
                     <h3>🎬 Video Upscaler</h3>
+                    <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Individual Project</strong></p>
                     <p><strong>Real-ESRGAN + FFmpeg</strong>. Frame-by-frame AI upscaling (4x resolution). AMD hardware encoding with CPU fallback.</p>
-                    <a href="video-upscaler.html">View Details</a>
-                    <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/video_upscaler" target="_blank">GitHub →</a>
+                    <div style="margin-top: 15px;">
+                        <a href="video-upscaler.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
+                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/video_upscaler" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                    </div>
                 </div>
                 <div class="project-card">
                     <h3>🎞️ Video to GIF Converter</h3>
+                    <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Individual Project</strong></p>
                     <p><strong>MoviePy + Pillow</strong>. Exact size constraints (1-50MB). Speed control (0.1x-2.0x). Auto-resolution scaling.</p>
-                    <a href="video-to-gif.html">View Details</a>
-                    <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Video_to_GIF_Converter" target="_blank">GitHub →</a>
+                    <div style="margin-top: 15px;">
+                        <a href="video-to-gif.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
+                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Video_to_GIF_Converter" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                    </div>
                 </div>
                 <div class="project-card">
                     <h3>🎤 Audio Transcriber</h3>
+                    <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Individual Project</strong></p>
                     <p><strong>Whisper (ONNX) + DirectML</strong>. AMD GPU acceleration. Processes long audio (30+ min). 3-5x faster than CPU.</p>
-                    <a href="audio-transcriber.html">View Details</a>
-                    <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Audio_to_Text_Transcriber" target="_blank">GitHub →</a>
+                    <div style="margin-top: 15px;">
+                        <a href="audio-transcriber.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
+                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Audio_to_Text_Transcriber" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                    </div>
                 </div>
                 <div class="project-card">
                     <h3>📝 Subtitle/MP3 Extractor</h3>
+                    <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Individual Project</strong></p>
                     <p><strong>FFmpeg CLI wrapper</strong>. Extracts embedded SRT subtitles. Falls back to MP3 audio extraction.</p>
-                    <a href="subtitle-extractor.html">View Details</a>
-                    <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Video-subtitle%26mp3-extractor" target="_blank">GitHub →</a>
+                    <div style="margin-top: 15px;">
+                        <a href="subtitle-extractor.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
+                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Video-subtitle%26mp3-extractor" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                    </div>
                 </div>
                 <div class="project-card">
                     <h3>🔍 File Scanner</h3>
+                    <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Individual Project</strong></p>
                     <p><strong>.NET APIs + PowerShell</strong>. 95K+ files/sec on HDD. Min-heap top-K algorithm. 16-50x faster than Get-ChildItem.</p>
-                    <a href="file-scanner.html">View Details</a>
-                    <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/File_Scanner" target="_blank">GitHub →</a>
+                    <div style="margin-top: 15px;">
+                        <a href="file-scanner.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
+                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/File_Scanner" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                    </div>
                 </div>
                 <div class="project-card">
                     <h3>🎮 Unity Image Extractor</h3>
+                    <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Individual Project</strong></p>
                     <p><strong>UnityPy + PIL</strong>. Extracts Texture2D/Sprite assets from .unity3d bundles. Batch processing, PNG conversion.</p>
-                    <a href="unity-extractor.html">View Details</a>
-                    <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Unity_Image_Extractor" target="_blank">GitHub →</a>
+                    <div style="margin-top: 15px;">
+                        <a href="unity-extractor.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
+                        <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Unity_Image_Extractor" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -134,7 +158,7 @@
     <section id="contact">
         <div class="container">
             <h2>Get In Touch</h2>
-            <p>I'm always open to discussing new opportunities, interesting projects, or just having a chat about technology!</p>
+            <p>I'm always open to discussing new opportunities, interesting projects, or just having a chat about fun, anime & AI!</p>
             <div class="contact-info">
                 <p><strong>Email:</strong> xiangyao888@gmail.com</p>
                 <p><strong>Website:</strong> <a href="https://yxiang-828.github.io/" target="_blank">yxiang-828.github.io</a></p>
