--- a/video-to-gif.html
+++ b/video-to-gif.html
@@ -35,6 +35,8 @@
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </div>
+
+        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
         </nav>
     </header>
 
@@ -50,6 +52,8 @@
             <span class="tech-badge">Batch Automation</span>
         </div>
 
+        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
+
         <p style="font-size: 1.2rem; color: #b0b0b0; margin: 30px 0;">
             Convert MP4 videos to optimized GIFs with exact size and speed constraints. Automatically scales resolution and adjusts frame rates to meet target file sizes (1-50MB). Perfect for social media, presentations, and web content.
         </p>
@@ -60,27 +64,41 @@
                 <h3 style="color: #00d4ff;">Exact Size Control</h3>
                 <p style="color: #b0b0b0;">Specify target size (1-50MB) - tool automatically optimizes to meet constraint</p>
             </div>
+
+        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
             <div class="feature-box">
                 <h3 style="color: #00d4ff;">Speed Adjustment</h3>
                 <p style="color: #b0b0b0;">0.1x to 2.0x playback speed control for dramatic or time-lapse effects</p>
             </div>
+
+        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
             <div class="feature-box">
                 <h3 style="color: #00d4ff;">Smart Resolution Scaling</h3>
                 <p style="color: #b0b0b0;">Automatically reduces resolution to fit size while maintaining quality</p>
             </div>
+
+        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
             <div class="feature-box">
                 <h3 style="color: #00d4ff;">Frame Rate Optimization</h3>
                 <p style="color: #b0b0b0;">Adjusts FPS dynamically based on target size and video length</p>
             </div>
+
+        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
             <div class="feature-box">
                 <h3 style="color: #00d4ff;">Constraint Validation</h3>
                 <p style="color: #b0b0b0;">Warns if target size is unrealistic for video duration</p>
             </div>
+
+        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
             <div class="feature-box">
                 <h3 style="color: #00d4ff;">Batch Processing</h3>
                 <p style="color: #b0b0b0;">Process multiple videos with same settings</p>
             </div>
+
+        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
         </div>
+
+        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
 
         <h2 class="section-title"> Parameters</h2>
         <table class="param-table">
@@ -142,11 +160,15 @@ py converter.py "video.mp4" --size 20 --speed 0.5</code></pre>
 # Result: 480p @ 15fps, perfect for social platforms</code></pre>
         </div>
 
+        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
+
         <div class="use-case">
             <h3 style="color: #00d4ff; margin-top: 0;">High Quality Presentation</h3>
             <pre style="margin-bottom: 0;"><code>py converter.py "demo.mp4" --size 50 --speed 1.0
 # Result: 720p @ 24fps, excellent quality for slides</code></pre>
         </div>
+
+        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
 
         <div class="use-case">
             <h3 style="color: #00d4ff; margin-top: 0;">Thumbnail/Preview</h3>
@@ -154,11 +176,15 @@ py converter.py "video.mp4" --size 20 --speed 0.5</code></pre>
 # Result: 360p @ 10fps, fast-loading preview</code></pre>
         </div>
 
+        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
+
         <div class="use-case">
             <h3 style="color: #00d4ff; margin-top: 0;">Slow Motion Effect</h3>
             <pre style="margin-bottom: 0;"><code>py converter.py "action.mp4" --size 30 --speed 0.5
 # Result: Half-speed playback, maintains quality</code></pre>
         </div>
+
+        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
 
         <h2 class="section-title"> Output Structure</h2>
         <pre><code>Video_to_GIF_Converter/
@@ -225,6 +251,8 @@ py converter.py "video.mp4" --size 20 --speed 0.5</code></pre>
         <div style="text-align: center; margin-top: 50px;">
             <a href="https://github.com/Yxiang-828/Helper_Tools/tree/main/Video_to_GIF_Converter" target="_blank" class="cta-button">View on GitHub </a>
         </div>
+
+        <p style="color: #ff6b6b; font-size: 0.9rem; margin: 10px 0;"><strong>Project Category:</strong> Individual Project (Personal Productivity Tool)</p>
     </div>
 
     <footer><div class="container"><p>&copy; 2025 Yao Xiang. All rights reserved.</p></div></footer>
