--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <ul>
                     <li><a href="#about">About</a></li>
                     <li><a href="#projects">Projects</a></li>
+                    <li><a href="#experience">Experience</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -48,6 +49,30 @@
                     <div style="margin-top: 15px;">
                         <a href="wingman.html" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Details</a>
                         <a href="https://github.com/Yxiang-828/Wingman" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <h3>📡 Dual-Mode AV Disruptor</h3>
+                    <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>HacX 2025 Hackathon Project</strong></p>
+                    <p><strong>Python + Raspberry Pi + CARLA</strong>. Non-destructive prototype to halt hostile autonomous vehicles by disrupting LiDAR and camera sensors. Validated with 15m range field tests.</p>
+                    <div style="margin-top: 15px;">
+                        <a href="https://github.com/Yxiang-828/HacX-AV-Sensor-Disruptor" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <h3>🧮 FPGA Calculator</h3>
+                    <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>EE2026 Scientific Calculator</strong></p>
+                    <p><strong>Verilog + Vivado + Basys 3</strong>. Scientific calculator & grapher. Features Newton-Raphson root finder and Q22.14 fixed-point arithmetic.</p>
+                    <div style="margin-top: 15px;">
+                        <a href="https://github.com/Yxiang-828/EE2026-Project-Vivado" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <h3>⌨️ FlowCLI</h3>
+                    <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>CS2113 Task Manager</strong></p>
+                    <p><strong>Java + JUnit + Gradle</strong>. Keyboard-optimized CLI task manager. Features advanced filtering, sorting, and CI/CD with GitHub Actions.</p>
+                    <div style="margin-top: 15px;">
+                        <a href="https://github.com/AY2526S1-CS2113-W13-2/tp" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -118,6 +143,23 @@
         </div>
     </section>
 
+    <section id="experience">
+        <div class="container">
+            <h2>Experience</h2>
+            <div class="project-grid" style="grid-template-columns: 1fr;">
+                <div class="project-card">
+                    <h3>Singapore Armed Forces (Sungei Gedong Camp)</h3>
+                    <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Signaller | Nov 2022 - Jan 2024</strong></p>
+                    <ul style="list-style-type: disc; padding-left: 20px; margin-top: 10px; color: #e0e0e0;">
+                        <li style="margin-bottom: 5px;"><strong>Awards:</strong> Best Unit Award, Outstanding Conduct Grade.</li>
+                        <li style="margin-bottom: 5px;">Managed signal equipment, electric circuits, and IP address configurations for mission-critical communications.</li>
+                        <li style="margin-bottom: 5px;">Mentored junior personnel in technical operations, contributing to the unit's operational readiness.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="skills">
         <div class="container">
             <h2>Skills & Technologies</h2>
@@ -127,10 +169,11 @@
                     <ul>
                         <li>Python</li>
                         <li>Java</li>
-                        <li>JavaScript</li>
-                        <li>TypeScript</li>
                         <li>C/C++</li>
                         <li>Verilog</li>
+                        <li>JavaScript/TypeScript</li>
+                        <li>SQL</li>
+                        <li>Shell Scripting</li>
                     </ul>
                 </div>
                 <div class="skill-category">
@@ -140,15 +183,19 @@
                         <li>Node.js</li>
                         <li>FastAPI</li>
                         <li>Electron</li>
+                        <li>JUnit</li>
+                        <li>Gradle</li>
                     </ul>
                 </div>
                 <div class="skill-category">
                     <h3>Tools & Technologies</h3>
                     <ul>
-                        <li>Git</li>
-                        <li>SQLite</li>
-                        <li>Supabase</li>
+                        <li>Git & GitHub Actions</li>
+                        <li>Docker</li>
+                        <li>Vivado</li>
+                        <li>Raspberry Pi</li>
                         <li>Arduino</li>
+                        <li>SQLite & Supabase</li>
                     </ul>
                 </div>
             </div>
@@ -163,7 +210,7 @@
                 <p><strong>Email:</strong> xiangyao888@gmail.com</p>
                 <p><strong>Website:</strong> <a href="https://yxiang-828.github.io/" target="_blank">yxiang-828.github.io</a></p>
                 <p><strong>GitHub:</strong> <a href="https://github.com/Yxiang-828" target="_blank">github.com/Yxiang-828</a></p>
-                <p><strong>LinkedIn:</strong> <a href="#" target="_blank">linkedin.com/in/yourprofile</a></p>
+                <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yao-xiang-733b06329/" target="_blank">linkedin.com/in/yao-xiang-733b06329</a></p>
             </div>
         </div>
     </section>
