Add documentation link for FlowCLI

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                     <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>CS2113 Task Manager</strong></p>
                     <p><strong>Java + JUnit + Gradle</strong>. Keyboard-optimized CLI task manager. Features advanced filtering, sorting, and CI/CD with GitHub Actions.</p>
                     <div style="margin-top: 15px;">
+                        <a href="https://ay2526s1-cs2113-w13-2.github.io/tp/" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px; margin-right: 10px;">View Docs</a>
                         <a href="https://github.com/AY2526S1-CS2113-W13-2/tp" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
                     </div>
                 </div>
