--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <section id="hero">
         <div class="hero-container">
-            <h2></h2>
-            <p>Computer Engineering @ NUS (Year 2). Hardware design (Verilog, Arduino, C/C++) + software automation (Python, Java, JavaScript, TypeScript). Building AI tools and efficient systems.</p>
+            <h2>Hi, I'm Yao Xiang!</h2>
+            <p>Innovative Computer Engineering student bridging hardware and software.</p>
             <a href="#contact" class="cta-button">Get In Touch</a>
         </div>
     </section>
