--- a/resume.html
+++ b/resume.html
@@ -14,6 +14,28 @@
             color: #000;
             background-color: #fff;
         }
+        @media print {
+            @page {
+                margin: 1cm;
+                size: A4;
+            }
+            body {
+                margin: 0;
+                padding: 0;
+                max-width: 100%;
+                width: 100%;
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
+            }
+            .contact-info a {
+                text-decoration: none;
+                color: #000;
+            }
+            /* Ensure links don't show URL after text */
+            a[href]:after {
+                content: none !important;
+            }
+        }
         h1 {
             text-align: center;
             text-transform: uppercase;
