--- a/resume.html
+++ b/resume.html
@@ -16,12 +16,12 @@
         }
         @media print {
             @page {
-                margin: 1cm;
+                margin: 0;
                 size: A4;
             }
             body {
                 margin: 0;
-                padding: 0;
+                padding: 2cm;
                 max-width: 100%;
                 width: 100%;
                 -webkit-print-color-adjust: exact;
