--- a/resume.html
+++ b/resume.html
@@ -5,16 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yao Xiang - Resume</title>
     <style>
+        html {
+            background-color: #f0f0f0;
+            min-height: 100%;
+        }
         body {
             font-family: "Times New Roman", Times, serif;
             line-height: 1.4;
             max-width: 800px;
-            margin: 0 auto;
+            margin: 40px auto;
             padding: 40px;
             color: #000;
             background-color: #fff;
+            box-shadow: 0 0 15px rgba(0,0,0,0.1);
         }
         @media print {
+            html {
+                background-color: #fff;
+            }
             @page {
                 margin: 1cm;
                 size: A4;
@@ -24,6 +32,7 @@
                 padding: 0;
                 max-width: 100%;
                 width: 100%;
+                box-shadow: none;
                 -webkit-print-color-adjust: exact;
                 print-color-adjust: exact;
             }
