--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
     <section id="hero">
         <div class="hero-container">
             <h2>Hi, I'm Yao Xiang!</h2>
-            <p>Innovative Computer Engineering student bridging hardware and software.</p>
-            <a href="#contact" class="cta-button">Get In Touch</a>
+            <p>Aspiring Computer Engineer with a strong passion for machine learning, hardware-software integration, and full-stack development. Proven ability to build efficient automation tools and AI-powered applications. Fluent in English and Chinese, and adaptable to new environments. Eager to leverage academic foundations in a professional workspace to drive technological innovation.</p>
+            <div style="margin-top: 20px;">
+                <a href="#contact" class="cta-button" style="margin-right: 15px;">Get In Touch</a>
+                <a href="resume_2.0.html" class="cta-button" style="background-color: transparent; border: 2px solid #ff4444;">View Resume</a>
+            </div>
         </div>
     </section>
 
