Update resume, index, and readme with new experience and projects

--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
             <h2>Featured Projects</h2>
             <div class="project-grid">
                 <div class="project-card">
+                    <h3>⚓ Maritime Hackathon 2026</h3>
+                    <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Hackathon Project (In Progress)</strong></p>
+                    <p>Currently developing an innovative solution for the maritime industry.</p>
+                    <div style="margin-top: 15px;">
+                        <a href="https://github.com/Yxiang-828/Maritime-Hackthon-2026" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <h3>💡 Hack4Good 2026</h3>
+                    <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Hackathon Project</strong></p>
+                    <p>Project developed for Hack4Good 2026. Check GitHub for latest updates and source code.</p>
+                    <div style="margin-top: 15px;">
+                        <a href="https://github.com/Yxiang-828/Hack4Good2026" target="_blank" class="cta-button" style="font-size: 0.9rem; padding: 8px 16px;">GitHub →</a>
+                    </div>
+                </div>
+                <div class="project-card">
                     <h3>🤖 Wingman</h3>
                     <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Team Project - NUS Orbital Apollo 2025</strong></p>
                     <p>Electron-based AI assistant desktop app. <strong>Electron + React + TypeScript + Python</strong>. Features AI integration, task management, cross-platform support.</p>
@@ -152,6 +168,14 @@
             <h2>Experience</h2>
             <div class="project-grid" style="grid-template-columns: 1fr;">
                 <div class="project-card">
+                    <h3>National University of Singapore (CS2113)</h3>
+                    <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Undergraduate Teaching Assistant | Jan 2026 - Present</strong></p>
+                    <ul style="list-style-type: disc; padding-left: 20px; margin-top: 10px; color: #e0e0e0;">
+                        <li style="margin-bottom: 5px;">Teaching Assistant for CS2113 Software Engineering & Object-Oriented Programming (AY25/26 Sem 2).</li>
+                        <li style="margin-bottom: 5px;">Guiding students on software principles, Java, and collaborative development using GitHub.</li>
+                    </ul>
+                </div>
+                <div class="project-card">
                     <h3>Singapore Armed Forces (Sungei Gedong Camp)</h3>
                     <p style="color: #ff6b6b; font-size: 0.9rem; margin-bottom: 10px;"><strong>Signaller | Nov 2022 - Jan 2024</strong></p>
                     <ul style="list-style-type: disc; padding-left: 20px; margin-top: 10px; color: #e0e0e0;">
@@ -200,6 +224,16 @@
                         <li>Raspberry Pi</li>
                         <li>Arduino</li>
                         <li>SQLite & Supabase</li>
+                    </ul>
+                </div>
+                <div class="skill-category">
+                    <h3>Relevant Coursework</h3>
+                    <ul>
+                        <li>Software Engineering (CS2113)</li>
+                        <li>Data Structures & Algos (CS2040C)</li>
+                        <li>Machine Learning (EE2211)</li>
+                        <li>Computer Org (CG2028)</li>
+                        <li>Digital Design (EE2026)</li>
                     </ul>
                 </div>
             </div>
