--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>I'm a Year 2 Computer Engineering student at the National University of Singapore, passionate about creating innovative solutions that combine hardware and software. My expertise spans from Verilog and Arduino for embedded systems to Python, Java, JavaScript, and TypeScript for modern applications.</p>
+            <p>I'm a Year 2 Computer Engineering student (Minor in AI) at the National University of Singapore, passionate about creating innovative solutions that combine hardware and software. My expertise spans from Verilog and Arduino for embedded systems to Python, Java, JavaScript, and TypeScript for modern applications.</p>
             <p>Currently developing Helper Tools (high-performance CLI utilities for developers) and Wingman (Electron-based AI assistant desktop app).</p>
         </div>
     </section>
